chandeliers-lus/tests/fail/ui/tc/when-self.rs
chandeliers_lus::decl! {
    node foo(b : bool when b) returns ();
    let tel;
}

fn main() {}
