chandeliers-lus/tests/fail/ui/tc/when-self.stderr
error: Variable b is not available yet at this point of the typechecking.
 --> tests/fail/ui/tc/when-self.rs:2:28
  |
2 |     node foo(b : bool when b) returns ();
  |                            ^
  |
  = note: During this incremental typechecking, you cannot access global
          variables and you may only use local variables that have been
          declared strictly beforehand, in the order of inputs then outputs
          then locals.
  = note: These are the variables that are already useable: (none declared)
